# ANC-cli

./: .gitignore  README.md  altofromvision.py  anc-forms.py  pyproject.toml
anc_cli/: doc_ai.py  main.py  settings.yml  utils.py
anc_cli/data/: departamentos.json  municipios.json
tests/: test_anc_cli.py
